# shapefile-rs

./: Cargo.toml
src/: header.rs  lib.rs  reader.rs  writer.rs
src/record/: bbox.rs  io.rs  multipatch.rs  multipoint.rs  polygon.rs  polyline.rs
tests/: shift_jis.rs  shirt_jis.rs
tests/data/: shift_jis.dbf  shift_jis.shp  shift_jis.shx
