[package]
name = "shapefile"
version = "0.3.0"
authors = ["tmontaigu <thomas.montaigu@laposte.net>"]
description = "Read & Write shapefiles in Rust"
license = "MIT"
readme = "README.md"
keywords = ["shapefile"]
homepage = "https://github.com/tmontaigu/shapefile-rs"
repository = "https://github.com/tmontaigu/shapefile-rs"
exclude = ["tests/data/*"]

#edition = "2018"
[dependencies]
byteorder = "1.2.7"
dbase = { git = "https://github.com/xjr1300/dbase-rs.git", rev = "7f31ac1a248db437d3e166a8ed0decd9fa677789" }
geo-types = { version = ">=0.4.0, <0.8.0", optional = true }

[package.metadata.docs.rs]
features = ["geo-types"]
